@@ -1,3 +1,7 @@
+drkns 09.09.2017 17:32:31 +0100 - build 5025
+
+1. 0003485: Exception при попытке просмотра некорректного? hlf
+
 zg 03.09.2017 14:24:00 FLE Daylight Time - build 5024
 
 1. при удалении выделения в неактивном редакторе, он перерисовывался поверх всех окон.
